--- a/index.html
+++ b/index.html
@@ -4,118 +4,237 @@
 <meta charset="UTF-8">
 <title>病人管理系统</title>
 <style>
-  body {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f5f7fa;
-    margin: 0;
-    padding: 20px;
-    font-size: 18px; /* 全局字体更大 */
-    line-height: 1.6;
-  }
+/* 页面整体 */
+body {
+  font-family: "Tahoma", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2rem;
+  background: #f4f6f8;
+  margin: 0;
+  padding: 1rem;
+  color: #333;
+}
 
-  h2 {
-    text-align: center;
-    color: #333;
-    font-size: 28px; /* 标题更大 */
-    margin-bottom: 20px;
-  }
+/* 标题 */
+h1 {
+  text-align: center;
+  color: #2c3e50;
+  margin-bottom: 0.5rem;
+  font-size: 3rem;
+}
 
+h2 {
+  color: #34495e;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  display: inline-block;
+  font-size: 2.2rem;
+}
+
+#settingsGear {
+  cursor: pointer;
+  font-size: 2rem;
+    margin-bottom: : 0.5rem;
+  vertical-align: middle;
+}
+
+/* 输入区域 */
+div input[type="text"], div input[list] {
+  padding: 0.6rem 0.8rem;
+  margin-bottom: 0.6rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid #ccc;
+  outline: none;
+  font-size: 2rem;
+  width: 100%;
+  max-width: 20rem;
+}
+
+div input:focus {
+  border-color: #3498db;
+  box-shadow: 0 0 0.3rem rgba(52,152,219,0.4);
+}
+
+/* 按钮 */
+button {
+  padding: 0.6rem 1rem;
+  border: none;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  font-weight: bold;
+  background-color: #3498db;
+  color: white;
+  font-size: 2rem;
+  transition: background-color 0.2s;
+}
+
+button:hover {
+  background-color: #2980b9;
+}
+
+/* 切换视图按钮 */
+.switchView {
+  margin-top: 0.5rem;
+}
+
+.switchView button {
+  background-color: #ecf0f1;
+  color: #2c3e50;
+}
+
+.switchView button:hover {
+  background-color: #bdc3c7;
+}
+
+/* 容器布局 */
+.container {
+  display: grid;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+/* 医生列 */
+.column-container {
+  background: #ffffff;
+  padding: 1rem;
+  border-radius: 1rem;
+  min-width: 16rem;
+  box-shadow: 0 0.4rem 1.2rem rgba(0,0,0,0.08);
+}
+
+.column-container h3 {
+  text-align: center;
+  margin-bottom: 0.5rem;
+  cursor: pointer;
+  color: #2c3e50;
+  font-size: 2rem;
+}
+
+/* 病人卡片 */
+.patient {
+  background: #d0eaff;
+  margin: 0.5rem 0;
+  padding: 1rem;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  transition: background-color 0.2s, transform 0.1s;
+  user-select: none;
+  font-size: 2rem;
+}
+
+.patient:hover {
+  background-color: #a9d6ff;
+}
+
+.patient.recent {
+  background-color: #b6f1b0 !important;
+}
+
+/* 操作区 */
+.operations {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.op-cell {
+  background: #ffdede;
+  padding: 1rem;
+  border-radius: 0.8rem;
+  flex: 1 1 10rem;
+  text-align: center;
+  font-weight: bold;
+  cursor: grab;
+  font-size: 2rem;
+  transition: background-color 0.2s;
+}
+
+.op-cell:hover {
+  background-color: #ffbaba;
+}
+
+/* 模态框 */
+.modal-bg {
+  position: fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: rgba(0,0,0,0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 1.2rem;
+  min-width: 28rem;
+  max-width: 90%;
+  box-shadow: 0 0.8rem 2rem rgba(0,0,0,0.15);
+  font-size: 2rem;
+}
+
+.modal input {
+  width: 100%;
+  padding: 0.8rem 1rem;
+  margin-bottom: 1rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid #ccc;
+  font-size: 2rem;
+}
+
+.modal button {
+  width: 48%;
+  margin-right: 4%;
+  font-size: 2rem;
+}
+
+.modal button:last-child {
+  margin-right: 0;
+  background-color: #95a5a6;
+}
+
+/* 页脚 */
+div[style*="text-align: center"] {
+  color: #95a5a6;
+  font-size: 2rem;
+  margin-top: 2rem;
+}
+
+/* ===== 响应式布局 ===== */
+
+/* 手机（小屏 < 600px）：一列布局 */
+@media (max-width: 600px) {
   .container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    gap: 20px;
+    grid-template-columns: 1fr;
   }
-
   .patient {
-    background: #fff;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 18px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
+    font-size: 2rem;
+    padding: 1.2rem;
   }
-
-  .patient strong {
-    font-size: 20px; /* 姓名加大 */
-    color: #222;
-  }
-
-  .info {
-    color: #555;
-    font-size: 16px;
-  }
-
   .operations {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
+    flex-direction: column;
   }
-
   .op-cell {
-    flex: 1;
-    padding: 12px 18px;
-    border-radius: 8px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    transition: background-color 0.2s ease;
+    flex: 1 1 auto;
   }
+}
 
-  .discharge {
-    background-color: #4caf50;
-    color: white;
+/* 平板（中屏 600-900px）：两列布局 */
+@media (min-width: 600px) and (max-width: 900px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
   }
+}
 
-  .discharge:hover {
-    background-color: #45a049;
+/* 电脑（大屏 > 900px）：多列自适应 */
+@media (min-width: 900px) {
+  .container {
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   }
-
-  .delete {
-    background-color: #f44336;
-    color: white;
-  }
-
-  .delete:hover {
-    background-color: #d32f2f;
-  }
-
-  /* 手机（小屏 < 600px）：一列布局 */
-  @media (max-width: 600px) {
-    body {
-      font-size: 20px; /* 手机字体更大 */
-      padding: 15px;
-    }
-
-    h2 {
-      font-size: 24px;
-    }
-
-    .patient {
-      font-size: 18px;
-      padding: 15px;
-    }
-
-    .patient strong {
-      font-size: 22px;
-    }
-
-    .operations {
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .op-cell {
-      flex: none;
-      width: 85%;       /* 按钮宽度更适合手机 */
-      max-width: 300px; /* 限制不会超屏 */
-      margin: 6px 0;
-      font-size: 18px;
-    }
-  }
+}
 </style>
-
 
 
 
