--- a/index.html
+++ b/index.html
@@ -278,9 +278,10 @@ div[style*="text-align: center"] {
     </div>
   </div>
 </div>
-
+  
+<a href="https://aoyama798.github.io/web/">
 <div style="text-align: center;margin:18px;">©Aoyama</div>
-
+</a>
 
 
 
