--- a/index.html
+++ b/index.html
@@ -233,10 +233,20 @@ div[style*="text-align: center"] {
   .container {
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   }
+  .patient-drag {
+  opacity: 0.6;
+  transform: scale(1.05);
+  border: 0.2rem dashed #3498db;
+  }
+}
+  .patient-drag {
+  opacity: 0.6;
+  transform: scale(1.05);
+  border: 0.2rem dashed #3498db;
 }
 </style>
 
-
+<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 
 
   
@@ -409,6 +419,7 @@ document.getElementById("addPatientBtn").addEventListener("click",()=>{
   document.getElementById("patientName").value="";
   document.getElementById("doctorInput").value="";
   renderColumns();
+  initSortable();
 });
 
 // Firebase 同步
@@ -452,36 +463,35 @@ document.getElementById("currentBtn").addEventListener("click",()=>{ showAll=fal
 document.getElementById("allBtn").addEventListener("click",()=>{ showAll=true; renderColumns(); });
 
 // 拖拽病人与操作
-let dragPatient=null;
-document.addEventListener("dragstart",e=>{
-  const p=e.target.closest(".patient");
-  if(p) dragPatient=p;
-});
-document.addEventListener("dragover",e=>e.preventDefault());
-document.addEventListener("drop",e=>{
-  e.preventDefault();
-  const targetCol = e.target.closest(".column-container");
-  const targetPatient = e.target.closest(".patient");
-  const opCell = e.target.closest(".op-cell");
+function initSortable() {
+  const container = document.getElementById("columnsContainer");
+  const columns = container.querySelectorAll(".column-container");
 
-  if(dragPatient && targetCol){
-    const targetDoctor=targetCol.dataset.doctor;
-    const patientObj=patients.find(p=>p.name===dragPatient.dataset.name);
-    if(!patientObj) return;
+  columns.forEach(col => {
+    new Sortable(col, {
+      group: 'patients',        // 允许跨列拖拽
+      animation: 150,
+      ghostClass: 'patient-drag',
+      onEnd: function(evt) {
+        const patientName = evt.item.dataset.name;
+        const patientObj = patients.find(p => p.name === patientName);
+        if(!patientObj) return;
 
-    if(targetPatient && targetPatient!==dragPatient){
-      const targetObj=patients.find(p=>p.name===targetPatient.dataset.name);
-      if(targetObj){ const temp=patientObj.row ??0; patientObj.row=targetObj.row ??0; targetObj.row=temp; }
-    }else{
-      patientObj.doctor=targetDoctor;
-      const colPatients=patients.filter(p=>p.doctor===targetDoctor && !p.discharge);
-      patientObj.row=colPatients.length ??0;
-    }
-    updateFirebase();
-    dragPatient=null;
-    renderColumns();
-    return;
-  }
+        const newDoctor = evt.to.dataset.doctor;
+        patientObj.doctor = newDoctor;
+
+        // 更新 row 顺序
+        const colPatients = Array.from(evt.to.children)
+          .filter(c => c.classList.contains('patient'))
+          .map(c => patients.find(p=>p.name===c.dataset.name));
+        colPatients.forEach((p,index)=>p.row=index);
+
+        updateFirebase();
+        renderColumns();
+      }
+    });
+  });
+}
 
   if(dragPatient && opCell){
     const patientIndex=patients.findIndex(p=>p.name===dragPatient.dataset.name);
