--- a/index.html
+++ b/index.html
@@ -290,6 +290,54 @@ div[style*="text-align: center"] {
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
 import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-database.js";
 
+// ======== 设备环境检测 ========
+const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+const isWeChat = /MicroMessenger/i.test(navigator.userAgent);
+
+if (isIOS || isWeChat) {
+  console.log("iOS 或 微信内置浏览器，启用 touch 拖拽适配");
+
+  let touchDragPatient = null;
+
+  document.addEventListener("touchstart", e => {
+    const p = e.target.closest(".patient");
+    if (p) {
+      touchDragPatient = p;
+      p.style.opacity = "0.5"; // 拖动时半透明
+    }
+  });
+
+  document.addEventListener("touchend", e => {
+    if (!touchDragPatient) return;
+    touchDragPatient.style.opacity = "1";
+    const touch = e.changedTouches[0];
+    const elem = document.elementFromPoint(touch.clientX, touch.clientY);
+
+    const targetCol = elem?.closest(".column-container");
+    const opCell = elem?.closest(".op-cell");
+
+    const patientObj = patients.find(p => p.name === touchDragPatient.dataset.name);
+
+    if (targetCol && patientObj) {
+      const targetDoctor = targetCol.dataset.doctor;
+      patientObj.doctor = targetDoctor;
+      const colPatients = patients.filter(p => p.doctor === targetDoctor && !p.discharge);
+      patientObj.row = colPatients.length ?? 0;
+      updateFirebase();
+      renderColumns();
+    } else if (opCell && patientObj) {
+      const patientIndex = patients.findIndex(p => p.name === patientObj.name);
+      if (opCell.id === "deleteCell") patients.splice(patientIndex, 1);
+      else if (opCell.id === "dischargeCell") patients[patientIndex].discharge = true;
+      updateFirebase();
+      renderColumns();
+    }
+
+    touchDragPatient = null;
+  });
+}
+
+  
 const firebaseConfig = {
   apiKey: "AIzaSyCe5seH8kOkGOfquiUYvFHz2bvcDssWGMs",
   authDomain: "patient-reminder-95c8d.firebaseapp.com",
