--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@ div[style*="text-align: center"] {
   
 </head>
 <body>
-<h1 style="text-align: center;">创二病人分配系统</h2>
+ 
+<h1 style="text-align: center;">
+  <img src="https://github.com/aoyama798/Patient-Align/blob/main/logo.png?raw=true" alt="医院Logo" style="height:4rem; vertical-align:middle; margin-right:1rem;"> 创二病人分配系统</h2>
 <h2>病人录入</h2>
 
 <div>
@@ -287,7 +289,7 @@ div[style*="text-align: center"] {
   </div>
 </div>
   
-<a href="https://aoyama798.github.io/web/">
+<a href="https://aoyama798.github.io/blog2/">
   
 <div style="text-align: center;margin:18px;">©Aoyama</div>
 </a>
